--- a/public/home.html
+++ b/public/home.html
@@ -27,5 +27,11 @@
         </nav>
 
     </header>
+    <div class=" w-[1024px] h-[1060.57px] mt-[167px] ml-[208px] border-[4px] bg-[#E0E4FC]
+    
+ 
+    ">
+
+    </div>
 </body>
 </html>
