--- a/public/home.html
+++ b/public/home.html
@@ -17,7 +17,7 @@
                 <li class="w-[44px] h-[24px]"><a href="">Home</a></li>
                 <li class="w-[56px] h-[24px]"><a href="">Product</a></li>
                 <li class="w-[50px] h-[24px]"><a href="">Pricing</a></li>
-                <li class="w-[66px] h-[24px]"><a href="">About US</a></li>
+                <li class="w-[68px] h-[24px]"><a href="">About US</a></li>
                 <li class="w-[32px] h-[24px]"><a href="">Blog</a></li>
                 <li class="w-[56px] h-[24px]"><a href="">Contact</a></li>
              </ul>
@@ -27,10 +27,24 @@
         </nav>
 
     </header>
-    <div class=" w-[1024px] h-[1060.57px] mt-[167px] ml-[208px] border-[4px] bg-[#E0E4FC]
-    
- 
-    ">
+    <div class=" w-[1024px] h-[1060.57px] mt-[167px] ml-[208px] border-[4px] bg-[#E0E4FC">
+        <h1 class=" w-[768px] h-[124px] mt-[167px] ml-[128px] font-Roboto text-[56px] font-[700] leading-[61.6px] text-center
+        ">The Best Software to Grow your Sales and Services</h1>
+        <p class=" w-[768px] h-[54px] mt-[45px] ml-[128px]  text-[#1D2130]  font-Roboto text-[18px] font-[400] leading-[27px] text-center">
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+            sed diam nonumy eirmod tempor invidunt ut labore 
+            et dolore magna aliquyam erat.
+        </p>
+        <form action="" id="form">
+            <input type="text" id="email" placeholder="Enter Your Email" class="rounded-[20px] border border-none
+            w-[576px] h-[120px] mt-[48px]"
+            >
+            <label for="email"></label>
+            <button class="rounded-[12px] text-center w-[173px] h-[56px]
+            text-[#FFFFFF] bg-[#1D2130]">Get Free trial</button>
+        </form>
+    <img src="../home-images/Dashboard image.png" alt="Dashboard" class=" rounded-[4px] text-center w-[1024px] h-[666.57px] mt-[184px]
+        ">
 
     </div>
 </body>
