--- a/public/home.html
+++ b/public/home.html
@@ -1,51 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../src/style.css" />
     <title>home</title>
-</head>
-<body class="bg-[#FFFFFF]">
+  </head>
+  <body class="bg-[#FFFFFF]">
     <header class="flex">
-
-        <nav class="flex w-[1440px] h-[71px]">
-            <img src="../home-images/logoo.jpg" class="w-[139.43px] h-[31.56px] mt-[19.72px]
-            ml-[80px] p-[0.64px] " alt="logo">
-            <ul class="flex w-[624px] h-[24px] mt-[23.67px] ml-[640px] gap-[32px] 
-            font-Roboto text-[16px] font-[400] leading-[24px]">
-                <li class="w-[44px] h-[24px]"><a href="">Home</a></li>
-                <li class="w-[56px] h-[24px]"><a href="">Product</a></li>
-                <li class="w-[50px] h-[24px]"><a href="">Pricing</a></li>
-                <li class="w-[68px] h-[24px]"><a href="">About US</a></li>
-                <li class="w-[32px] h-[24px]"><a href="">Blog</a></li>
-                <li class="w-[56px] h-[24px]"><a href="">Contact</a></li>
-             </ul>
-             <button class="w-[144px] h-[56px] mt-[8px] ml-[32px] rounded-[12px] text-center
-             text-[#FFFFFF] bg-[#1D2130]">Free trial</button>
-
-        </nav>
-
+      <nav class="flex w-[1440px] h-[71px]">
+        <img
+          src="../home-images/logoo.jpg"
+          class="w-[139.43px] h-[31.56px] mt-[19.72px] ml-[80px] p-[0.64px]"
+          alt="logo"
+        />
+        <ul
+          class="flex w-[624px] h-[24px] mt-[23.67px] ml-[640px] gap-[32px] font-Roboto text-[16px] font-[400] leading-[24px]"
+        >
+          <li class="w-[44px] h-[24px]"><a href="">Home</a></li>
+          <li class="w-[56px] h-[24px]"><a href="">Product</a></li>
+          <li class="w-[50px] h-[24px]"><a href="">Pricing</a></li>
+          <li class="w-[68px] h-[24px]"><a href="">About US</a></li>
+          <li class="w-[32px] h-[24px]"><a href="">Blog</a></li>
+          <li class="w-[56px] h-[24px]"><a href="">Contact</a></li>
+        </ul>
+        <button
+          class="w-[144px] h-[56px] mt-[8px] ml-[32px] rounded-[12px] text-center text-[#FFFFFF] bg-[#1D2130]"
+        >
+          Free trial
+        </button>
+      </nav>
     </header>
-    <div class=" w-[1024px] h-[1060.57px] mt-[167px] ml-[208px] border-[4px] bg-[#E0E4FC">
-        <h1 class=" w-[768px] h-[124px] mt-[167px] ml-[128px] font-Roboto text-[56px] font-[700] leading-[61.6px] text-center
-        ">The Best Software to Grow your Sales and Services</h1>
-        <p class=" w-[768px] h-[54px] mt-[45px] ml-[128px]  text-[#1D2130]  font-Roboto text-[18px] font-[400] leading-[27px] text-center">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
-            sed diam nonumy eirmod tempor invidunt ut labore 
-            et dolore magna aliquyam erat.
-        </p>
-        <form action="" id="form">
-            <input type="text" id="email" placeholder="Enter Your Email" class="rounded-[20px] border border-none
-            w-[576px] h-[120px] mt-[48px]"
-            >
-            <label for="email"></label>
-            <button class="rounded-[12px] text-center w-[173px] h-[56px]
-            text-[#FFFFFF] bg-[#1D2130]">Get Free trial</button>
-        </form>
-    <img src="../home-images/Dashboard image.png" alt="Dashboard" class=" rounded-[4px] text-center w-[1024px] h-[666.57px] mt-[184px]
-        ">
-
+    <div
+      class="w-[1024px] h-[1060.57px] mt-[143px] ml-[208px] border-[4px] bg-[#E0E4FC]">
+      <h1
+        class="w-[768px] h-[124px] mt-[143px] ml-[128px] font-Roboto text-[56px] font-[700] leading-[61.6px] text-center"
+      >
+        The Best Software to Grow your Sales and Services
+      </h1>
+      <p
+        class="w-[768px] h-[54px] mt-[45px] ml-[128px] text-[#1D2130] font-Roboto text-[18px] font-[400] leading-[27px] text-center"
+      >
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+        eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+      </p>
+      <form action="" id="form">
+        <input
+          type="text"
+          id="email"
+          placeholder="Enter Your Email"
+          class="rounded-[20px] border border-none w-[576px] h-[120px] mt-[48px]"
+        />
+        <label for="email"></label>
+        <button
+          class="rounded-[12px] text-center w-[173px] h-[56px] text-[#FFFFFF] bg-[#1D2130]"
+        >
+          Get Free trial
+        </button>
+      </form>
+      <img
+        src="../home-images/Dashboard image.png"
+        alt="Dashboard"
+        class="rounded-[4px] text-center w-[1024px] h-[666.57px] mt-[143px]"
+      />
     </div>
-</body>
+    <div class="w-[1280px] h-[561px] ml-[80px]">
+      <p
+        class="w-[133px] h-[29px] mt-[138px] ml-[574px] font-Roboto text-[18px] font-[700] leading-[28.8px] text-center"
+      >
+        High-quality
+      </p>
+      <h2
+        class="w-[576px] h-[116px] font-Roboto font-[700] leading-[57.6px] text-center text-[48px]"
+      >
+        We have the Best Solution for your Business
+      </h2>
+      <div class=" flex w-[1280px] h-[344px] ml-[80px] bg-[#E0E4FC] rounded-[24px]
+      ">
+        <div class="w-[362px] h-[216px]">
+           <img src="../home-images/Icon 1.svg" class="w-[48px] h-[48px] ml-[68px] mt-[64px]
+          ">
+          <p class="w-[362px] h-[76px] ml-[64px] font-Roboto text-[32px] font-[700] leading-[38.4px]">
+            High security to protect from piracy
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
